--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>HISTÓRIA DE ALEF</h1>
-            <p>#homem-aranha</p>
+            <p>#jogador</p>
         </div>
 
         <div>
